--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+  
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+    </nav>
     <div class="container">
    
         <section class="top-content">
