--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <img class ="img">
     <div class="container about-page">
      
     About
@@ -58,8 +59,8 @@
     Let's Work Together
 
     Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-        
-      <footer>
+    </img>   
+      <footer class="footer">
         <nav>
           <a href="index.html">Home</a>
           <a href="#">About</a>
